syntax = "proto3";
package ProtoMessages;

message TVoid {

}

// 기본 패킷 구조
message TPacketPayload {
  int32 id = 1;
  sint32 type_number = 2;
  bytes data = 3;
}

message TVector3 {
  float x = 1;
  float y = 2;
  float z = 3;
}

message TGameUser {
  string user_id = 1;
  int32 room_id = 2;
  int32 bet_count = 3;
  double current_payout = 4;
  int64 initial_coins = 5;
  int32 user_total_profit = 6;
  int64 user_total_bet_amount = 7;
  int64 user_session_bet_amount = 8;
  double jackpot_prob = 9;
}